completed module 'Angular Modules and Controllers'

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,10 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+APM/typings/angularjs/angular.d.ts
+APM/typings/jquery/jquery.d.ts
+APM/typings/tsd.d.ts
+APM/app/app.js
+APM/app/common/services/common.services.js
+APM/app/common/services/dataAccessService.js
+APM/app/common/services/productResourceMock.js
