--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,5 @@ APM/app/common/services/productResourceMock.js
 APM/typings/angularjs/angular-mocks.d.ts
 APM/app/products/productListCtrl.js
 APM/app/products/productListCtrl.js
+APM/typings/angularjs/angular-route.d.ts
+APM/app/products/productDetailCtrl.js
